--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ theme: gstylez
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: heroku
-  repo: https://git.heroku.com/progblogi.git
+  repo: https://github.com/HuddleHouse/progblog.io
   message: "Yeah"
 
 
