UPDATING SOME STYLEZ

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "semantic-ui-popup": "^2.2.9"
   }
 }
